# nf-modules

./: .editorconfig  .gitignore  .nf-core.yml  .pre-commit-config.yaml  .prettierignore  README.md  Taskfile.yaml  nf-test.config
.github/workflows/: code-linting.yml  docs.yml  nf-core-linting.yml  nf-test.yml  pre-commits.yml  pytest-workflow.yml  pytest.yml
docs/: CONTRIBUTING.md  generate_docs.py  main.py  mkdocs.yml  pipeline_usage.py  pipelines.yml  pull-pipelines.sh  pyproject.toml
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
docs/templates/: index.md.j2  module.md.j2  pipelines.md.j2  subworkflow.md.j2
modules/: nf-core
modules/ebi-metagenomics/amrintegrator/: main.nf  meta.yml
modules/ebi-metagenomics/antismash/: environment.yml  main.nf  meta.yml
modules/ebi-metagenomics/antismashgffbuilder/: main.nf  meta.yml
modules/ebi-metagenomics/assessmcpproportions/: environment.yml  main.nf  meta.yml
modules/ebi-metagenomics/bam2cov/: main.nf  meta.yml
modules/ebi-metagenomics/bbmap/: main.nf
modules/ebi-metagenomics/bgcsmapper/: environment.yml  main.nf  meta.yml
modules/ebi-metagenomics/binette/: main.nf  meta.yml
modules/ebi-metagenomics/binnete/: environment.yml  main.nf  meta.yml
modules/ebi-metagenomics/blastp/: main.nf  meta.yml
modules/ebi-metagenomics/bmtagger/: main.nf
modules/ebi-metagenomics/bwamem2decontnobams/: environment.yml  main.nf  meta.yml
modules/ebi-metagenomics/cat/: environment.yml  (+2 more)
subworkflows/: yaml-schema.json
tests/config/: nextflow.config  nf-test.config  pytest_modules.yml  test_data.config
(+730 files in other folders)
